@@ -1,5 +1,10 @@
 2006-01-01 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/Makefile.am: touch files generated by antlr;
+	antlr doesn't update the timestamps correctly.
+
+2006-01-01 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/Makefile.am (EXTRA_DIST): Added
 	openvrml-config.h.in; removed mistakenly listed
 	openvrml-gl-config.h.in and openvrml-gl-common.h.
